# genai-ml-service

./: .gitignore  README.md  pyproject.toml
app/api/: __init__.py  main.py  predict.py  training.py
ml/: __init__.py
ml/config/: __init__.py  settings.py
ml/features/: __init__.py  extractors.py  llmops_reader.py
ml/prediction/: __init__.py  predictor.py
ml/store/: __init__.py  model_store.py  prediction_store.py
ml/training/: __init__.py  trainer.py
tests/: test_api.py  test_features.py  test_llmops_integration.py  test_models.py  test_prediction.py
