[project]
name = "genai-ml-service"
version = "0.1.0"
description = "Prediction service for GenAI platform - generates predictive signals from historical data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
